--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/color-palette2.css">
-    <script src="./scripts/color-palette2.js" defer></script>
+    <link rel="stylesheet" href="./color-palette2.css">
+    <script src="./color-palette2.js" defer></script>
     <title>Color Palette</title>
 </head>
 <body>
